--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi==0.104.1",
+    "uvicorn==0.24.0",
+    "sqlalchemy==2.0.23",
+    "pydantic==2.4.2",
+    "python-jose[cryptography]==3.3.0",
+    "passlib[bcrypt]==1.7.4",
+    "python-multipart==0.0.6",
+    "psycopg2-binary==2.9.9",
+    "python-dotenv==1.0.0",
+    "email-validator==2.1.0.post1",
+    "aiosmtplib==2.0.2",
     "py3-validate-email>=1.0.5.post2",
     "validate-email>=1.3",
 ]
