--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "aiosmtplib==2.0.2",
     "py3-validate-email>=1.0.5.post2",
     "validate-email>=1.3",
+    "pandas==2.1.3",
+    "openpyxl==3.1.2",
 ]
