--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,10 @@
         "Access-Control-Allow-Credentials": "true"
       }
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.py": {
+      "includeFiles": "src/public/**"
+    }
+  }
 }
