--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.py",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-        "Access-Control-Allow-Headers": "*",
-        "Access-Control-Allow-Credentials": "true"
-      }
+      "dest": "api/index.py"
     }
-  ],
-  "functions": {
-    "api/index.py": {
-      "includeFiles": "src/**",
-      "maxDuration": 30
-    }
-  }
+  ]
 }
