--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ python-multipart==0.0.6
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 email-validator==2.1.0.post1
-resend
+resend>=1.0.0
 pandas==2.1.3
 openpyxl==3.1.2
 stripe==11.2.0
