--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,8 @@ dependencies = [
     "pandas==2.1.3",
     "openpyxl==3.1.2",
     "stripe==11.2.0",
+    "requests>=2.31.0",
+    "Pillow>=10.0.0",
+    "pypdf>=4.0.0",
+    "PyMuPDF>=1.23.0",
 ]
